<resources>
    <string name="app_name">rcycl</string>
    <string name="app_header">Saving the planet, together.</string>

    <string name="request_pickup_prompt">
        Got a few clean, empty aluminum or plastic bottles?
        Enter your address below and we\'ll send someone to pick them up.
    </string>

    <string name="request_pickup_kudos">
        Place your recycling box/bin/bag outside and it\'ll be empty by morning. How easy was that?
    </string>

    <string name="sign_in_prompt">
        Sign in to track your score. We use that to decide who wins prizes.
    </string>

    <string name="not_a_user_prompt"> No account? </string>

    <string name="request_pickup_apt_reminder">
        (Remember to enter your apartment number!)
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_request_pickup">Request Pickup</string>
    <string name="menu_go_pickup">Go Pickup</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_my_account">My Account</string>
</resources>
