<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request_pickup"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_request_pickup" />
        <item
            android:id="@+id/nav_go_pickup"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_go_pickup" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_my_account" />
    </group>

</menu>