<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/request_pickup_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_pickup_prompt"/>

    <EditText
        android:id="@+id/request_pickup_address"
        android:inputType="textPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/request_pickup_prompt"/>

    <TextView
        android:id="@+id/request_pickup_address_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_pickup_address"
        android:text="@string/request_pickup_apt_reminder"/>

    <Button
        android:id="@+id/button_request_pickup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/request_pickup_address_reminder"
        android:text="@string/menu_request_pickup"/>

</RelativeLayout>