<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/request_pickup_kudos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_pickup_prompt"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/sign_in_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_prompt"
        android:layout_margin="16dp"
        android:layout_below="@+id/request_pickup_kudos"/>

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Address:"
        android:layout_below="@+id/sign_in_prompt"/>

    <EditText
        android:id="@+id/sign_in_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/email_txt"/>

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:layout_below="@+id/sign_in_email"/>

    <EditText
        android:id="@+id/sign_in_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/password_txt"/>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sign_in_password"
        android:text="Sign In"/>

    <TextView
        android:id="@+id/no_account_prompt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/sign_in_password"
        android:layout_toRightOf="@+id/button_sign_in"
        android:layout_toEndOf="@+id/button_sign_in"
        android:text="@string/not_a_user_prompt"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sign_in_password"
        android:layout_toRightOf="@+id/no_account_prompt"
        android:layout_toEndOf="@+id/no_account_prompt"
        android:text="Sign Up"/>

</RelativeLayout>